--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -158,29 +158,35 @@
                 memoryElement.className =
                   "bg-white rounded-xl shadow-md overflow-hidden hover:shadow-xl transition-all transform hover:-translate-y-1 border border-blue-100 flex flex-col";
                 memoryElement.innerHTML = `
-          <div class="p-6 flex flex-col h-full">
-            <div class="flex items-center justify-between mb-3">
-              <div class="flex items-center text-sm text-gray-500">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1 text-blue-500" viewBox="0 0 20 20" fill="currentColor">
-                  <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"/>
-                </svg>
-                ${formattedDate}
-              </div>
-              <span class="px-3 py-1 bg-blue-100 text-blue-700 rounded-full text-xs font-medium">${dayName}</span>
-            </div>
-            <div class="bg-gradient-to-r from-blue-50 to-violet-50 p-4 rounded-lg flex-grow">
-              <p class="text-gray-800 font-medium line-clamp-3">${memory.note}</p>
-            </div>
-            <div class="mt-4 flex justify-end">
-              <button class="edit-memo-btn text-blue-600 hover:text-blue-800 text-sm font-medium flex items-center transition-colors">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
-                  <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
-                </svg>
-                Edit
-              </button>
-            </div>
-          </div>
-        `;
+                <div class="p-6 flex flex-col h-full">
+                  <div class="flex items-center justify-between mb-3">
+                    <div class="flex items-center text-sm text-gray-500">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1 text-blue-500" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"/>
+                      </svg>
+                      ${formattedDate}
+                    </div>
+                    <span class="px-3 py-1 bg-blue-100 text-blue-700 rounded-full text-xs font-medium">${dayName}</span>
+                  </div>
+                  <div class="bg-gradient-to-r from-blue-50 to-violet-50 p-4 rounded-lg flex-grow">
+                    <p class="text-gray-800 font-medium line-clamp-3">${memory.note}</p>
+                  </div>
+                  <div class="mt-4 flex justify-end space-x-3">
+                    <button class="edit-memo-btn text-blue-600 hover:text-blue-800 text-sm font-medium flex items-center transition-colors">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+                      </svg>
+                      Edit
+                    </button>
+                    <button class="delete-memo-btn text-red-600 hover:text-red-800 text-sm font-medium flex items-center transition-colors">
+                      <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
+                        <path fill-rule="evenodd" d="M6 8a1 1 0 011-1h6a1 1 0 011 1v8a2 2 0 01-2 2H8a2 2 0 01-2-2V8zm5-5a1 1 0 10-2 0v1H5a1 1 0 000 2h10a1 1 0 100-2h-4V3z" clip-rule="evenodd"/>
+                      </svg>
+                      Delete
+                    </button>
+                  </div>
+                </div>
+                `;
                 container.appendChild(memoryElement);
                 //edit modal
                 const editMemoModal =
