--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -173,7 +173,7 @@
                       </svg>
                       Edit
                     </button>
-                    <button class="delete-memo-btn text-red-600 hover:text-red-800 text-sm font-medium flex items-center transition-colors">
+                    <button class="delete-memo-btn text-red-600 hover:text-red-800 text-sm font-medium flex items-center transition-colors" data-id="${memory.ID}">
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" viewBox="0 0 20 20" fill="currentColor">
                         <path fill-rule="evenodd" d="M6 8a1 1 0 011-1h6a1 1 0 011 1v8a2 2 0 01-2 2H8a2 2 0 01-2-2V8zm5-5a1 1 0 10-2 0v1H5a1 1 0 000 2h10a1 1 0 100-2h-4V3z" clip-rule="evenodd"/>
                       </svg>
@@ -182,6 +182,7 @@
                   </div>
                 </div>
                 `;
+                let selectedMemoId = null;
                 container.appendChild(memoryElement);
 
                 //delete memo
@@ -190,13 +191,53 @@
                 const deleteMemoBtn =
                   memoryElement.querySelector(".delete-memo-btn");
                 deleteMemoBtn.addEventListener("click", function () {
+                  selectedMemoId = this.getAttribute("data-id");
                   deleteMemoModal.classList.remove("hidden");
                 });
                 const cancelDeleteBtn =
                   document.getElementById("cancel-delete-btn");
-                  cancelDeleteBtn.addEventListener('click', function() {
-                    deleteMemoModal.classList.add("hidden")
-                  })
+                cancelDeleteBtn.addEventListener("click", function () {
+                  deleteMemoModal.classList.add("hidden");
+                });
+
+                const confirmDeleteBtn =
+                  document.getElementById("confirm-delete-btn");
+                confirmDeleteBtn.addEventListener("click", async function () {
+                  if (!selectedMemoId) return;
+                  const data = {
+                    memo_id: selectedMemoId,
+                  };
+
+                  console.log("data to delete", data);
+                  try {
+                    const response = await fetch("/api/memo", {
+                      method: "DELETE",
+                      headers: {
+                        "Content-Type": "application/json",
+                        memoraire_token: token,
+                      },
+                      body: JSON.stringify(data),
+                    });
+
+                    const result = await response.json();
+                    console.log(result);
+
+                    if (response.ok) {
+                      window.location.reload();
+                    } else {
+                      const responseMessage =
+                        result?.message ||
+                        "Failed to delete memo. Please try again.";
+                      showToast(responseMessage);
+                    }
+                  } catch (error) {
+                    showToast("Network error. Please try again.");
+                  } finally {
+                    document
+                      .getElementById("loading-overlay")
+                      ?.classList.add("hidden");
+                  }
+                });
                 //end delete memo
 
                 //edit modal
@@ -480,7 +521,7 @@
             Cancel
           </button>
           <button
-            id="confirm-delete"
+            id="confirm-delete-btn"
             class="px-4 py-2 bg-gradient-to-r from-red-600 to-pink-700 rounded-lg text-white hover:opacity-90 transition-colors flex items-center"
           >
             <svg
